--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "author": "marcopolo",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-typescript": "^7.16.0",
-    "@chainsafe/libp2p-noise": "^4.1.1",
-    "@types/jest": "^27.0.3",
-    "babel-jest": "^27.4.2",
-    "jest": "^27.4.3",
-    "libp2p-gossipsub": "^0.11.4",
-    "libp2p-mplex": "^0.10.4",
-    "libp2p-websockets": "^0.16.2",
-    "multiaddr": "^10.0.1",
-    "typescript": "^4.5.2"
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@chainsafe/libp2p-gossipsub": "^9.1.0",
+    "@chainsafe/libp2p-noise": "^12.0.2",
+    "@libp2p/interface-libp2p": "^3.2.0",
+    "@libp2p/interface-pubsub": "^4.0.1",
+    "@libp2p/mplex": "^8.0.4",
+    "@libp2p/websockets": "^6.0.3",
+    "@multiformats/multiaddr": "^12.1.3",
+    "@types/jest": "^29.5.3",
+    "babel-jest": "^29.6.1",
+    "jest": "^29.6.1",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -28,11 +30,11 @@
     "build-watch": "tsc -w"
   },
   "dependencies": {
-    "y-protocols": "^1.0.x",
-    "peer-id": ">=0.16.0"
+    "@libp2p/peer-id": ">=2.0.4",
+    "y-protocols": "^1.0.x"
   },
   "peerDependencies": {
-    "yjs": "13.5.x",
-    "libp2p": ">=0.33.0"
+    "libp2p": ">=0.45.9",
+    "yjs": "13.6.x"
   }
 }
