--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-typescript": "^7.22.5",
     "@chainsafe/libp2p-gossipsub": "^9.1.0",
     "@chainsafe/libp2p-noise": "^12.0.2",
     "@chainsafe/libp2p-yamux": "^4.0.2",
@@ -18,16 +15,18 @@
     "@libp2p/mplex": "^8.0.4",
     "@libp2p/websockets": "^6.0.3",
     "@multiformats/multiaddr": "^12.1.3",
-    "@types/jest": "^29.5.3",
-    "babel-jest": "^29.6.1",
-    "jest": "^29.6.1",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=16.0.0"
   },
   "scripts": {
-    "test": "tsc && node dist/index.test.js",
+    "test-manual": "tsc && node dist/index-manual.test.js",
+    "test": "tsc && mocha ./dist/index.test.js",
     "build": "tsc",
     "build-watch": "tsc -w"
   },
