--- a/package.json
+++ b/package.json
@@ -1,41 +1,46 @@
 {
-  "name": "y-libp2p",
-  "version": "0.0.2",
-  "description": "js-libp2p provider for yjs",
-  "main": "dist/index.js",
-  "author": "marcopolo",
-  "license": "MIT",
+  "name": "@drawp2p/y-libp2p",
+  "version": "1.0.0",
+  "description": "Libp2p provider for YJS",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
-  "devDependencies": {
-    "@chainsafe/libp2p-gossipsub": "^9.1.0",
-    "@chainsafe/libp2p-noise": "^12.0.2",
-    "@chainsafe/libp2p-yamux": "^4.0.2",
-    "@libp2p/interface-libp2p": "^3.2.0",
-    "@libp2p/interface-pubsub": "^4.0.1",
-    "@libp2p/mplex": "^8.0.4",
-    "@libp2p/websockets": "^6.0.3",
-    "@multiformats/multiaddr": "^12.1.3",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "chai": "^4.3.7",
-    "mocha": "^10.2.0",
-    "typescript": "^5.1.6"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test-manual": "tsc && node dist/index-manual.test.js",
-    "test": "tsc && mocha ./dist/index.test.js",
-    "build": "tsc",
-    "build-watch": "tsc -w"
+    "test": "tsc && mocha ./dist/tests/index.test.js --timeout 30000",
+    "test-manual": "tsc && node ./dist/tests/index.manual.test.js",
+    "build": "tsc"
   },
   "dependencies": {
-    "@libp2p/peer-id": ">=2.0.4",
+    "@libp2p/interface-libp2p": "^3.2.0",
+    "eventemitter3": "^5.0.1",
     "y-protocols": "^1.0.x",
-    "yjs": "^13.6.7"
+    "yjs": "^13.6.7",
+    "libp2p": "^0.46.7",
+    "@chainsafe/libp2p-gossipsub": "^10.1.0",
+    "@chainsafe/libp2p-noise": "^13.0.0",
+    "@libp2p/mplex": "^9.0.5",
+    "@libp2p/pubsub-peer-discovery": "^8.0.4",
+    "@libp2p/websockets": "^7.0.5",
+    "@multiformats/multiaddr": "^12.1.7"
   },
-  "peerDependencies": {
-    "libp2p": ">=0.45.9"
+  "keywords": [],
+  "author": "Vaibhav Muchandi (0xvaibhav.eth)",
+  "license": "MIT",
+  "devDependencies": {
+    "@chainsafe/libp2p-gossipsub": "^10.1.0",
+    "@chainsafe/libp2p-noise": "^13.0.0",
+    "@chainsafe/libp2p-yamux": "^5.0.0",
+    "@libp2p/mplex": "^9.0.5",
+    "@libp2p/peer-id": "^3.0.2",
+    "@libp2p/websockets": "^7.0.5",
+    "@multiformats/multiaddr": "^12.1.7",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.8",
+    "libp2p": "^0.46.7",
+    "mocha": "^10.2.0",
+    "typescript": "^5.2.2"
   }
 }
